# pose_estimation

./: CMakeLists.txt  CMakeLists.txt~  package.xml
src/: CeresOptimizer.h  CeresOptimizerOdometry.h  Matrix.h  PhotoconsistencyFrameAlignment.cpp  pose_estimationCeres.cpp
